package com.example.sudokusolver.common

object TestTags {
    const val NUMBER_BOX = "NumberBox"
    const val SUDOKU_CELL = "SudokuCell"
    const val EMPTY_CELL = "EmptyCell"
}